@@ -15,7 +15,9 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowManager;
+import fi.aalto.cs.apluscourses.model.task.Arguments;
 import java.awt.Component;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Date;
@@ -46,17 +48,29 @@ public class ComponentDatabase {
   /**
    * Out of all open editors, retrieves the one with a specific file open.
    */
-  public static @Nullable EditorComponentImpl getEditorWindow(String fileNameSubstring) {
+  public static @Nullable EditorComponentImpl getEditorWindow(@NotNull Project project,
+                                                              @NotNull String path) {
+    var basePath = project.getBasePath();
+    if (basePath == null) {
+      return null;
+    }
+    var fullPath = Path.of(basePath, path);
     var editors = ComponentLocator.getComponentsByClass("EditorComponentImpl");
     for (var editorComponent : editors) {
       var editor = (EditorComponentImpl) editorComponent;
-      if (editor.getEditor().getVirtualFile().getName().contains(fileNameSubstring)) {
+      if (editor.getEditor().getVirtualFile() != null
+          && Path.of(editor.getEditor().getVirtualFile().getPath()).equals(fullPath)) {
         return editor;
       }
     }
     return null;
   }
 
+  /**
+   * Returns the button that controls the tutorial progress.
+   *
+   * @return A JButton or null, if no such a component was found.
+   */
   public static @Nullable Component getProgressButton() {
     return ComponentLocator.getComponentByClass("TutorialProgressAction");
   }
@@ -65,7 +79,10 @@ public class ComponentDatabase {
    * Opens a file in the editor, return true if successful.
    */
   public static boolean showFile(@NotNull String path, @NotNull Project project) {
-    var modulePath = Paths.get(project.getBasePath() + path);
+    if (project.getBasePath() == null || project.isDisposed()) {
+      return false;
+    }
+    var modulePath = Path.of(project.getBasePath(), path);
     var vf = LocalFileSystem.getInstance().findFileByIoFile(modulePath.toFile());
     if (vf == null) {
       return false;
@@ -162,8 +179,12 @@ public class ComponentDatabase {
   /**
    * Closes file in the editor for a given project.
    */
-  public static void closeFile(@NotNull String path, @NotNull Project project) {
-    var modulePath = Paths.get(project.getBasePath() + path);
+  public static void closeFile(@NotNull Arguments actionArguments, @NotNull Project project) {
+    var filePath = (String) actionArguments.opt("filePath");
+    if (filePath == null) {
+      return;
+    }
+    var modulePath = Path.of(project.getBasePath(), filePath);
     var vf = LocalFileSystem.getInstance().findFileByIoFile(modulePath.toFile());
     if (vf == null) {
       return;
@@ -172,7 +193,7 @@ public class ComponentDatabase {
   }
 
   /**
-   * Hides a tool window.
+   * Closes a tool window.
    * @param id      The name of the tool window
    * @param project The project
    */
